Quick fix for menu alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .postmodtools {
-    margin-top: -.3rem;
-    margin-bottom: -.3rem;
+    height: 24px;
 }
 
 .postmodtools .dropdown-trigger {
